<resources>
    <string name="app_name">Concello Teo</string>
    <string name="title_activity_festa_gastronomica_scrolling">festaGastronomicaScrolling</string>
    <string name="tituloBatalla">Visitas teatralizadas de la Batalla de Cacheiras</string>
    <string name="lugarNegrita">Lugar</string>
    <string name="lugarBatalla">Reitoral de Bamonde</string>
    <string name="dataNegrita">Fecha</string>
    <string name="dataBatalla">Abril</string>
    <string name="infoNegrita">Info práctica</string>
    <string name="infoBatalla1">Caminata en grupos reducidos de 30 personas. Habrá bus de regreso para ir de lo alto de Montouto a Bamonde.</string>
    <string name="infoBatalla2">Turismo y Os Quinquilláns ofrecen rutas dramatizadas sobre la Batalla de Cacheiras los fines de semana de los meses de julio, agosto e septiembre. La propuesta será una ruta desde Bamonde hasta el mirador de Montouto con casi 9 quilómetros de recorrido. El actor y la actriz harán varias paradas en las que realizarán parte de este acontecimento histórico. Estas rutas dramatizadas se realizarán los sábados de julio y agosto por la mañana y los domingos de septiembre también en horario de mañana.</string>

    <string name="tituloGastronomicas">Fiestas gastronómicas</string>
    <string name="tituloPolo">Fiesta del pollo picantón</string>
    <string name="lugarPolo">Lugar: Rarís</string>
    <string name="dataPolo">Fecha: Mayo</string>
    <string name="descricionPolo">Todos los asistentes de esta fiesta gastronómica podrán degustar un delicioso menú compuesto de picantón, pan, café y queimada. Durante la jornada también habrá pulpo y churrasco para tomar. Contará con animación musical.</string>

    <string name="tituloNadal">Navidad</string>
    <string name="tituloMercados">Mercados</string>

    <string name="tituloSardina">San Juán</string>
    <string name="lugarSardina">Lugar: Calo</string>
    <string name="dataSardina">Fecha: Julio</string>
    <string name="descricionSardina">Sardinada gratuita con tirada de fuegos artificiales. Se procederá a la quema de la cabra vieja que dará paso a animación musical.</string>

    <string name="tituloCabalos">San Martiño de Francos</string>
    <string name="lugarCabalos">Lugar: Carballeira de Francos</string>
    <string name="dataCabalos">Fecha: Noviembre</string>
    <string name="descricionCabalos">Feria cabalar de San Martiño que se celebra en la Carballeira de Francos, en la parroquia de Calo. Habrá actividades para el público familiar, juegos en familia, animación circense y animaciones musicales.</string>

    <string name="tituloXamon">Fiesta del jamón al bagazo</string>
    <string name="lugarXamon">Lugar: Campo de la fiesta de Reis</string>
    <string name="dataXamon">Fecha: Septiembre</string>
    <string name="descricionXamon">Los vecinos de Reis, en el municipio de Teo, celebrarán una nueva edición de la Festa do Xamón ó Bagazo. Durante la jornada todos los asistentes podrán disfrutar de un menú en el que el plato estrella será el jamón al bagazo.</string>

    <string name="tituloConcertos">Conciertos de la Banda de Teo</string>
    <string name="bamondeConcertos">Bamonde</string>
    <string name="fechaBamondeConcertos">Domingo 24 de Abril</string>
    <string name="luciConcertos">Lucí</string>
    <string name="fechaLuciConcertos">Sábado 23 de Julio</string>
    <string name="concertoNadalConcertos">Concierto de Navidad</string>
    <string name="fechaConcertosConcertos">Domingo 26 de Diciembre</string>
    <string name="LugarConcertosConcertos">Auditorio Municipal Constante Liste</string>

    <string name="localizacionMercado">Localización</string>
    <string name="sitioMercado">Plaza Circular de los Tilos</string>
    <string name="dataMercado">Fecha</string>
    <string name="fechaMercado">Diciembre</string>
    <string name="tituloInfoMercado">Info práctica</string>
    <string name="informacionMercado">Una buena oportunidad para comprar los últimos regalos antes de las fiestas. Habrá puestos de artesanía, vino y sidra de la Comarca del Ulla, productos de panadería, floristería, librerías y mercado labriego. Y para animar la jornada habrá talleres para los niños y carrusel ademas de una cantina.</string>

    <string name="tituloNegritaObradoiros">Talleres</string>
    <string name="tituloObradoiros">Talleres de adornos</string>
    <string name="dataObradoiro">Fecha: Diciembre</string>
    <string name="lugarObradoiro">Lugar: Escuela de Ameneiro, Calo</string>
    <string name="informacionObradoiro">Los talleres serán impartidos por un profesional. Los materiales serán facilitados por el ayuntamiento y despues del taller podrán llevarse algún adorno para colocar en su árbol o en alguno de los árboles que están ya instalados por todo Teo</string>

    <string name="tituloDoces">Taller de dulces de invierno</string>
    <string name="dataDoces">Fecha: Enero</string>
    <string name="lugarDoces">Lugar: Casa Común de Rarís</string>
    <string name="informacionDoces">Elaboración y decoración de postres de invierno fáciles</string>

    <string name="tituloDocesNadal">Taller de dulces de Navidad</string>
    <string name="dataDocesNadal">Fecha: Diciembre</string>
    <string name="lugarDocesNadal">Lugar: Casa Común de Rarís</string>
    <string name="informacionDocesNadal">Elaboración y decoración de postres de Navidad</string>

    <string name="tituloEntroido">Carnavales</string>
    <string name="dataEntroido">Fecha</string>
    <string name="dataEntroido1">Marzo</string>
    <string name="lugarEntroido">Lugar</string>
    <string name="lugarEntroido1">Rarís-Reis-Cacheiras</string>
    <string name="infoEntroido">Info práctica</string>
    <string name="informacionEntroido">Los Generales de la Ulla son el espectáculo más destacado del Carnaval tradicional de la comarca del Ulla, que se lleva a cabo en las inmediaciones de la ciudad de Santiago desde la primera mitad del siglo XIX: los Generales van montados a caballo, disfrazados con vistosas vestimentas militares similares a las de aquella época, pero que ademas incluyen adornos puramente carnavalescos, que lucen tamén los caballos.</string>

    <string name="imagen_inicio">ImagenInicio</string>

    <string name="action_settings">Settings</string>
    <string name="mercado">mercado.</string>

</resources>
