<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/botonTeo2"
        android:layout_width="100dp"
        android:layout_height="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="#00FFFFFF"
        android:contentDescription="botonTeo"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo8" />

    <ImageButton
        android:id="@+id/hamburguesa2"
        android:layout_width="48dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="#00FFFFFF"
        android:contentDescription="hamburguesa"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/hamburguesa" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/texto"
                android:layout_width="372dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:background="#FFFFFF"
                android:gravity="center"
                android:paddingLeft="60dp"
                android:paddingTop="15dp"
                android:text="Festas gastronómicas"
                android:textAlignment="viewStart"
                android:textColor="#415419"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/barra1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="70dp"
                android:foregroundTint="#2DFFFFFF"
                android:translationY="-50dp"
                app:srcCompat="@mipmap/lineaverder" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="257dp"
                android:layout_height="191dp"
                android:translationX="40dp"
                android:translationY="-20dp"
                app:srcCompat="@mipmap/polo" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:text="@string/tituloPolo"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingTop="10dp"
                android:text="@string/dataPolo" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingTop="10dp"
                android:text="@string/lugarPolo" />

            <TextView
                android:id="@+id/textView51"
                android:layout_width="301dp"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingTop="10dp"
                android:text="@string/descricionPolo" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="258dp"
                android:layout_height="171dp"
                android:translationX="40dp"
                android:translationY="35dp"
                app:srcCompat="@mipmap/sardina" />

            <TextView
                android:id="@+id/textView52"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingTop="60dp"
                android:text="@string/tituloSardina"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView56"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingTop="10dp"
                android:text="@string/dataSardina" />

            <TextView
                android:id="@+id/textView57"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingTop="10dp"
                android:text="@string/lugarSardina" />

            <TextView
                android:id="@+id/textView58"
                android:layout_width="296dp"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingTop="10dp"
                android:text="@string/descricionSardina" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="258dp"
                android:layout_height="172dp"
                android:translationX="40dp"
                android:translationY="35dp"
                app:srcCompat="@mipmap/cabalo" />

            <TextView
                android:id="@+id/textView59"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingTop="60dp"
                android:text="@string/tituloCabalos"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView60"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingTop="10dp"
                android:text="@string/dataCabalos" />

            <TextView
                android:id="@+id/textView61"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingTop="10dp"
                android:text="@string/lugarCabalos" />

            <TextView
                android:id="@+id/textView62"
                android:layout_width="301dp"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingTop="10dp"
                android:text="@string/descricionCabalos" />

            <ImageView
                android:id="@+id/barra2"
                android:layout_width="348dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="70dp"
                android:foregroundTint="#2DFFFFFF"
                android:paddingTop="30dp"
                android:translationY="-50dp"
                app:srcCompat="@mipmap/lineaverder" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:translationY="-30dp">


                <ImageButton
                    android:id="@+id/facebook"
                    android:layout_width="53dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="#00B8AEAE"
                    android:contentDescription="facebook"
                    android:scaleType="fitXY"
                    app:srcCompat="@mipmap/facebook"
                    app:tint="#7F000000" />

                <ImageButton
                    android:id="@+id/twitter"
                    android:layout_width="70dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="-20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="#00B8AEAE"
                    android:contentDescription="twitter"
                    android:scaleType="fitXY"
                    app:srcCompat="@mipmap/twitter"
                    app:tint="#7F000000" />

                <ImageButton
                    android:id="@+id/instagram"
                    android:layout_width="55dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="-22dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="#00B8AEAE"
                    android:contentDescription="instagram"
                    android:scaleType="fitXY"
                    app:srcCompat="@mipmap/instagram"
                    app:tint="#7F000000" />

                <ImageButton
                    android:id="@+id/info"
                    android:layout_width="55dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="125dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="10dp"
                    android:backgroundTint="#00B8AEAE"
                    android:contentDescription="información"
                    android:scaleType="fitXY"
                    app:srcCompat="@mipmap/logoinformacion"
                    app:tint="#7F000000" />
            </LinearLayout>

            <androidx.constraintlayout.widget.Barrier
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:barrierDirection="left" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>